# capstone_project

./: .gitattributes  .gitignore  orders.db  products.db  temp_ss.csv
data/: obfuscated_bin_list.csv
data/clean_src/command_io/: command_io.c
data/clean_src/cpu/: cpu.c
data/clean_src/crackme/: crackme.c
data/clean_src/hash/: hash.c
data/clean_src/keybox/: keybox.c
data/clean_src/maze/: maze.c
data/clean_src/md5/: md5.c
data/clean_src/smart_shop/: smart_shop.c
data/obfuscated/command_io/: clean.bc  clean.ll  obfuscated.bc
data/obfuscated/cpu/: clean.bc  clean.ll  obfuscated.bc  obfuscated.ll
data/obfuscated/crackme/: clean.bc  clean.ll  obfuscated.bc  obfuscated.ll
data/obfuscated/hash/: clean.bc  clean.ll  obfuscated.bc  obfuscated.ll
data/obfuscated/keybox/: clean.bc  clean.ll  obfuscated.bc  obfuscated.ll
data/obfuscated/maze/: clean.bc  clean.ll  obfuscated.bc  obfuscated.ll
data/obfuscated/md5/: clean.bc  clean.ll  obfuscated.bc
data/obfuscated/smart_shop/: clean.bc  clean.ll  obfuscated.bc
src/: main.py
src/binary_lifting/: lifting.py  note.md
src/fuzzing_equi_check/: fuzzing.py
src/llvm_pass/: britening_ir.py
src/llvm_pass/brighten_010_repair_pass/: CMakeLists.txt  README.md
src/llvm_pass/brighten_010_repair_pass/src/: BrightenRepairPass.h  Helpers.cpp  RuleAddRemillEntryDispatchers.cpp  RuleCanonicalizeObfuscatedCompares.cpp  RuleDefineRemillControlHelpers.cpp  RuleFixCallbackFunctionPointerStores.cpp  RuleForwardMcSemaFlagLoads.cpp  RuleForwardMcSemaGuestStackSlots.cpp  RuleForwardMcSemaStateLoads.cpp  RuleGrowMcSemaSyntheticStack.cpp  RuleGuardRawIndirectCalls.cpp  RuleHardenUnsafeScanf.cpp  RuleImplementExternCallBridge.cpp  RuleInlineMcSemaExternalWrappers.cpp  RuleNormalizeJumpTableTargets.cpp  RuleNormalizeRemillFunctionCalls.cpp  RulePruneDeadMcSemaFlagStores.cpp  RulePruneDeadRipStores.cpp  RulePruneUnusedMcSemaStateStores.cpp  RulePruneUnusedRemillMcSemaHelpers.cpp  RuleRecoverNoReturnFallthroughTargets.cpp  RuleRepairMcSemaRawIndirectCallStack.cpp  RuleRepairMcSemaX87PseudoDoubleLoads.cpp  RuleRepairObfuscatedStackSubtractions.cpp  RuleRepairRemillVarArgFPCalls.cpp  RuleRepairRemillX87LibCalls.cpp  RuleResolveAliases.cpp  RuleSanitizeDangerousStrlen.cpp  RuleStripPoisonDrivingAttributes.cpp  RuleStripPoisonDrivingFlags.cpp  RuleSynthesizeMissingMain.cpp  main.cpp
src/llvm_pass/brighten_010_repair_pass/tests/: grow_mcsema_stack.ll  mcsema_dead_flag_stores.ll  mcsema_dead_rip_stores.ll  mcsema_ext_wrapper_inline_attrs.ll  mcsema_flag_load_forward.ll  mcsema_guest_stack_forward.ll  mcsema_raw_indirect_call_stack.ll  mcsema_state_load_forward.ll  mcsema_unused_state_stores.ll  mcsema_x87_pseudo_double_load.ll  normalize_jump_table_targets.ll  raw_indirect_call_guard.ll  raw_indirect_call_no_dispatcher.ll  recover_noreturn_duplicate_switch_edge.ll  recover_noreturn_fallthrough.ll  recover_noreturn_phi_incoming_dominance.ll  remill_call_resolve.ll  remill_call_unresolved.ll  remill_control_helper_definitions.ll  remill_entry_dispatcher.ll  remill_missing_main.ll  remill_missing_main_auto_sub.ll  remill_missing_main_owner_fallback.ll  remill_unused_helper_prune.ll  remill_vararg_fp_printf.ll  remill_x87_sqrtl_wrapper.ll  run_tests.sh  ub_attrs.ll  ub_flags.ll  ub_flags_constexpr.ll
src/llvm_pass/brighten_020_state_ssa_pass/: CMakeLists.txt  main_recovered.bc  main_recovered.c  main_recovered.config.json  main_recovered.dsm  main_recovered.ll
src/llvm_pass/brighten_030_stack_ssa_pass/: CMakeLists.txt  main_recovered.bc  main_recovered.c  main_recovered.dsm  main_recovered.ll
src/llvm_pass/brighten_030_stack_ssa_pass/src/: main.cpp
src/llvm_pass/brighten_031_state_forward_pass/: CMakeLists.txt  main_recovered.bc  main_recovered.c  main_recovered.config.json  main_recovered.dsm  main_recovered.ll
src/llvm_pass/brighten_032_host_frame_pass/: CMakeLists.txt  main_recovered.bc  main_recovered.c  main_recovered.config.json  main_recovered.dsm  main_recovered.ll
src/llvm_pass/brighten_033_libc_prototype_pass/: CMakeLists.txt  main_recovered.bc  main_recovered.c  main_recovered.config.json  main_recovered.dsm  main_recovered.ll
src/llvm_pass/deobfuscate_070_symbolic_cff_pass/: CMakeLists.txt
src/llvm_pass/deobfuscate_070_symbolic_cff_pass/src/: main.cpp
tools/: buid_data.sh  clean_llvm_ir.py  llvm_ir_native_checking.py
(+58 files in other folders)
